--- a/src/assets/styles/views/_RecipeEdit.scss
+++ b/src/assets/styles/views/_RecipeEdit.scss
@@ -5,6 +5,7 @@
     padding: 2.5%;
     margin: 1rem;
     background-color: #0a2544;
+    // overflow-x: hidden;
 
     button,
     a {
@@ -37,7 +38,7 @@
         button,
         a {
             width: 4rem;
-            margin: 4rem;
+            margin: 2rem;
         }
     }
 
